k8s/base/kickplate/temp/deployments/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  labels:
    service: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: keycloak-db
  template:
    metadata:
      labels:
        service: keycloak-db
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-init-config
      volumes:
        - name: postgres-init-config
          configMap:
            name: keycloak-postgres-init
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    service: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      service: keycloak
  template:
    metadata:
      labels:
        service: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          ports:
            - containerPort: 8080
          args: ["start-dev"]
          command: ["&&", "printenvs"]
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    service: keycloak
  ports:
    - protocol: TCP
      name: keycloak
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
spec:
  selector:
    service: keycloak-db
  ports:
    - protocol: TCP
      name: keycloak-db
      port: 5432
      targetPort: 5432
