k8s/base/kickplate/temp/deployments/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kickplate-registry
spec:
  selector:
    matchLabels:
      service: kickplate-registry
  replicas: 1
  template:
    metadata:
      labels:
        service: kickplate-registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: kickplate-registry
  labels:
    service: kickplate-registry
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    service: kickplate-registry
